<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cinema TKHDT</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="desc">Description</string>
    <string name="day">Day: </string>
    <string name="time">Time: </string>
    <string name="tvquantity">Quantity: </string>
    <string name="seat">Type Seat: </string>
    <string name="totalprice">Total Price: </string>
    <string name="title">Title: </string>
    <string name="rating">Rating: </string>
    <string name="genre">Genre: </string>
    <string name="year">Year: </string>
    
    <string name="search_string">Search films.. </string>
    <string name="back_home">Back to home</string>
    <string name="chooseDate">Showtimes: </string>
    <string name="chooseSeat">Select Seat: </string>
    <string name="chooseTime">Schedule: </string>
    <string name="chooseQuantity">Quantity: </string>
    <string name="vip">V.I.P</string>
    <string name="standard">Standard</string>

    <!-- Choose Date -->
    <string name="choose_date">Choose a date</string>

    <string-array name="date">
        <item>27/11/2014</item>
        <item>28/11/2014</item>
        <item>29/11/2014</item>
        <item>30/11/2014</item>
    </string-array>

    <!-- Choose Time -->
    <string name="choose_time">Choose a time</string>

    <string-array name="time">
        <item>9:10 AM</item>
        <item>11:10 AM</item>
        <item>13:10 PM</item>
        <item>17:10 PM</item>
    </string-array>
    <!-- Quantity -->
    <string name="quantity">Quantity</string>

    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Now Showing</item>
        <item>Coming Soon</item>
        <item>Trailer</item>
        <item>About</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="detail_information_">"Detail Information: "</string>

</resources>