<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_detailfilm" >

    <LinearLayout
        android:id="@+id/lnIMG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imgBanner"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:contentDescription="@string/desc"
            android:src="@drawable/cinema_banner" />

        <RelativeLayout
            android:id="@+id/rlDetail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:orientation="vertical" >

            <!-- Thumbnail Image -->

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/thumbnail"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp" />

            <!-- Title -->

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginLeft="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="160dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/title"
                android:textStyle="bold" />
            <!-- Rating -->

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/title"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="160dp"
                android:layout_marginTop="50dp"
                android:text="@string/rating"
                android:textStyle="bold" />

            <!-- Genre -->

            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/rating"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="160dp"
                android:layout_marginTop="25dp"
                android:text="@string/genre"
                android:textColor="@color/genre"
                android:textStyle="bold" />

            <!-- Year -->

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/genre"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="160dp"
                android:layout_marginTop="25dp"
                android:text="@string/year"
                android:textColor="@color/year"
                android:textStyle="bold" />

            <!-- Booking Tickets -->

            <ImageView
                android:id="@+id/imgBookingTicket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/thumbnail"
                android:layout_centerInParent="true"
                android:layout_marginTop="170dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/image_bookingticket_cart" />

            <Spinner
                android:id="@+id/spinnerChooseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/imgBookingTicket"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="70dp" />

            <TextView
                android:id="@+id/tvChooseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/imgBookingTicket"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="70dp"
                android:text="@string/chooseDate"
                android:textSize="20sp"
                android:textStyle="italic" />

            <Spinner
                android:id="@+id/spinnerChooseTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/spinnerChooseDate"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp" />

            <TextView
                android:id="@+id/tvChooseTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tvChooseDate"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:text="@string/chooseTime"
                android:textSize="20sp"
                android:textStyle="italic" />

            <Spinner
                android:id="@+id/spinnerQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/spinnerChooseTime"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp" />

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tvChooseTime"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:text="@string/chooseQuantity"
                android:textSize="20sp"
                android:textStyle="italic" />

            <RadioGroup
                android:id="@+id/rgSeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/spinnerQuantity"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp" >

                <RadioButton
                    android:id="@+id/rSeatVIP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/vip" />

                <RadioButton
                    android:id="@+id/rSeatStandard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standard" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvChooseSeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tvQuantity"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:text="@string/chooseSeat"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imgCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/imgBookingTicket"
                android:layout_centerInParent="true"
                android:layout_marginTop="300dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/check_btn" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>