<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_detailfilm" >

    <LinearLayout
        android:id="@+id/lnIMG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imgBanner"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:contentDescription="@string/desc"
            android:src="@drawable/cinema_banner" />

        <ImageView
            android:id="@+id/imgDetailTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/image_detail_ticket" />

        <RelativeLayout
            android:id="@+id/rlDetail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:orientation="vertical" >

            <!-- Thumbnail Image -->

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/thumbnail"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <!-- Title -->

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/thumbnail"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/title"
                android:textStyle="bold" />

            <!-- Date -->

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvTitle"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/day"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/title"
                android:textStyle="bold" />

            <!-- Time -->

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvDate"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/title"
                android:textStyle="bold" />

            <!-- Quantity -->

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvTime"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/tvquantity"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/title"
                android:textStyle="bold" />

            <!-- Type Seat -->

            <TextView
                android:id="@+id/tvTypeSeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvQuantity"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/seat"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/title"
                android:textStyle="bold" />

            <!-- Type Seat -->

            <TextView
                android:id="@+id/tvTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvTypeSeat"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/totalprice"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/title"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgTicketOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTotalPrice"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/ticketok" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>