<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_detailfilm" >

    <LinearLayout
        android:id="@+id/lnIMG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imgBanner"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:contentDescription="@string/desc"
            android:src="@drawable/cinema_banner" />

        <RelativeLayout
            style="@style/Container"
            android:id="@+id/rlDetail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scrollbarStyle="insideOverlay"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:orientation="vertical" >

            <!-- Thumbnail Image -->

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/thumbnail"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp" />

            <!-- Title -->

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginLeft="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="160dp"
                android:layout_marginTop="10dp"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/title"
                android:textStyle="bold" />
            <!-- Rating -->

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/title"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="160dp"
                android:layout_marginTop="50dp"
                android:text="@string/rating"
                android:textStyle="bold" />

            <!-- Genre -->

            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/rating"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="160dp"
                android:layout_marginTop="25dp"
                android:text="@string/genre"
                android:textColor="@color/genre"
                android:textStyle="bold" />

            <!-- Year -->

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/genre"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="160dp"
                android:layout_marginTop="25dp"
                android:text="@string/year"
                android:textColor="@color/year"
                android:textStyle="bold" />

            <!-- Detail Information -->

            <ImageView
                android:id="@+id/detailInfor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/thumbnail"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="240dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/desc"
                android:src="@drawable/image_detail_film" />

            <TextView
                android:id="@+id/tvDetailInfor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/detailInfor"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="75dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imgViewTrailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/thumbnail"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="160dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/watchtrailer_btn" />

            <ImageView
                android:id="@+id/imgViewBooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/thumbnail"
                android:layout_marginLeft="230dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="160dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/booking_btn" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>